syntax = "proto3";

package ru.vyrostkov.grpc.server.grpcserver.vet;

message Vet {
  int32 vet_id = 1;
  string first_name = 2;
  string last_name = 3;
  string middle_name = 4;
  string age = 5;
  string speciality = 6;
}

message CreateVetRequest {
  Vet vet = 1;
}

message CreateVetResponse {
  int32 vet_id = 1;
}

message FindByIdVetRequest {
  int32 vet_id = 1;
}

message FindByIdVetResponse {
  Vet vet = 1;
}

message FindAllByIdVetRequest {

}

message FindAllByIdResponse {
  repeated Vet vet = 1;
}

message FindAllByNameVetRequest {
  string name = 1;
}

message FindAllByNameResponse {
  repeated Vet vet = 1;
}

message DeleteVetRequest {
  int32 vet_id = 1;
}

message DeleteVetResponse {

}

message UpdateVetRequest {
  Vet vet = 1;
}

message UpdateVetResponse {
  Vet vet = 1;
}

service VetService {
  rpc CreateVet (CreateVetRequest) returns (CreateVetResponse);
  rpc FindByIDVet (FindByIdVetRequest) returns (FindByIdVetResponse);
  rpc FindAllByIdVet (FindAllByIdVetRequest) returns (FindAllByIdResponse);
  rpc FindAllByName (FindAllByNameVetRequest) returns (FindAllByNameResponse);
  rpc DeleteVet (DeleteVetRequest) returns (DeleteVetResponse);
  rpc UpdateVet (UpdateVetRequest) returns (UpdateVetResponse);
}